@@ -36,8 +36,8 @@ public:
 	virtual void connect(const OnlineUser& user, const string& token);
 	void connect(const OnlineUser& user, string const& token, bool secure);
 
-	virtual void hubMessage(const string& aMessage);
-	virtual void privateMessage(const OnlineUser& user, const string& aMessage);
+	virtual void hubMessage(const string& aMessage, bool thirdPerson = false);
+	virtual void privateMessage(const OnlineUser& user, const string& aMessage, bool thirdPerson = false);
 	virtual void sendUserCmd(const string& aUserCmd) { send(aUserCmd); }
 	virtual void search(int aSizeMode, int64_t aSize, int aFileType, const string& aString, const string& aToken);
 	virtual void password(const string& pwd);
