@@ -38,8 +38,8 @@ public:
 	virtual void disconnect(bool graceless);
 
 	virtual void connect(const OnlineUser& user, const string& token) = 0;
-	virtual void hubMessage(const string& aMessage) = 0;
-	virtual void privateMessage(const OnlineUser& user, const string& aMessage) = 0;
+	virtual void hubMessage(const string& aMessage, bool thirdPerson = false) = 0;
+	virtual void privateMessage(const OnlineUser& user, const string& aMessage, bool thirdPerson = false) = 0;
 	virtual void sendUserCmd(const string& aUserCmd) = 0;
 	virtual void search(int aSizeMode, int64_t aSize, int aFileType, const string& aString, const string& aToken) = 0;
 	virtual void password(const string& pwd) = 0;
