@@ -290,12 +290,12 @@ void ClientManager::connect(const UserPtr& p, const string& token) {
 	}
 }
 
-void ClientManager::privateMessage(const UserPtr& p, const string& msg) {
+void ClientManager::privateMessage(const UserPtr& p, const string& msg, bool thirdPerson) {
 	Lock l(cs);
 	OnlineIter i = onlineUsers.find(p->getCID());
 	if(i != onlineUsers.end()) {
 		OnlineUser* u = i->second;
-		u->getClient().privateMessage(*u, msg);
+		u->getClient().privateMessage(*u, msg, thirdPerson);
 	}
 }
 
