@@ -277,9 +277,10 @@ bool HubFrame::enter() {
 		tstring param;
 		tstring msg;
 		tstring status;
-		if(WinUtil::checkCommand(cmd, param, msg, status)) {
+		bool thirdPerson = false;
+		if(WinUtil::checkCommand(cmd, param, msg, status, thirdPerson)) {
 			if(!msg.empty()) {
-				client->hubMessage(Text::fromT(msg));
+				client->hubMessage(Text::fromT(msg), thirdPerson);
 			}
 			if(!status.empty()) {
 				addStatus(status);
@@ -412,26 +413,21 @@ void HubFrame::addChat(const tstring& aLine) {
 	} else {
 		line = _T("\r\n");
 	}
-	line += aLine;
+	line += Text::toDOS(aLine);
 
-	int limit = chat->getTextLimit();
-	if(chat->length() + static_cast<int>(line.size()) > limit) {
-		HoldRedraw hold(chat);
+	SCROLLINFO scrollInfo = { sizeof(SCROLLINFO), SIF_RANGE | SIF_PAGE | SIF_POS };
+	bool scroll = (
+		(::GetScrollInfo(chat->handle(), SB_VERT, &scrollInfo) == 0) || // on error, let's keep scrolling...
+		(scrollInfo.nPos == (scrollInfo.nMax - max(scrollInfo.nPage - 1, 0u))) // scroll only if the current scroll position is at the end
+	);
+	HoldRedraw hold(chat, !scroll);
+
+	size_t limit = chat->getTextLimit();
+	if(chat->length() + line.size() > limit) {
+		HoldRedraw hold2(chat, scroll);
 		chat->setSelection(0, chat->lineIndex(chat->lineFromChar(limit / 10)));
 		chat->replaceSelection(_T(""));
 	}
-#ifdef PORT_ME	
-	BOOL noscroll = TRUE;
-	POINT p = ctrlClient.PosFromChar(ctrlClient.GetWindowTextLength() - 1);
-	CRect r;
-	ctrlClient.GetClientRect(r);
-
-	if( r.PtInRect(p) || MDIGetActive() != m_hWnd)
-		noscroll = FALSE;
-	else {
-		ctrlClient.SetRedraw(FALSE); // Strange!! This disables the scrolling...????
-	}
-#endif
 	if(BOOLSETTING(LOG_MAIN_CHAT)) {
 		StringMap params;
 		params["message"] = Text::fromT(aLine);
@@ -441,11 +437,10 @@ void HubFrame::addChat(const tstring& aLine) {
 		LOG(LogManager::CHAT, params);
 	}
 	chat->addText(line);
-#ifdef PORT_ME
-	if(noscroll) {
-		ctrlClient.SetRedraw(TRUE);
-	}
-#endif
+
+	if(scroll)
+		chat->sendMessage(WM_VSCROLL, SB_BOTTOM);
+
 	setDirty(SettingsManager::BOLD_HUB);
 }
 
@@ -881,21 +876,21 @@ void HubFrame::on(HubUpdated, Client*) throw() {
 }
 
 void HubFrame::on(Message, Client*, const OnlineUser& from, const string& msg, bool thirdPerson) throw() {
-	speak(ADD_CHAT_LINE, Util::formatMessage(from.getIdentity().getNick(), msg, thirdPerson));
+	if(SETTING(FILTER_MESSAGES)) {
+		if((msg.find("Hub-Security") != string::npos) && (msg.find("was kicked by") != string::npos)) {
+			// Do nothing...
+		} else if((msg.find("is kicking") != string::npos) && (msg.find("because:") != string::npos)) {
+			speak(ADD_SILENT_STATUS_LINE, msg);
+		} else {
+			speak(ADD_CHAT_LINE, Util::formatMessage(from.getIdentity().getNick(), msg, thirdPerson));
+		}
+	} else {
+		speak(ADD_CHAT_LINE, Util::formatMessage(from.getIdentity().getNick(), msg, thirdPerson));
+	}
 }
 
 void HubFrame::on(StatusMessage, Client*, const string& line) throw() {
-	if(SETTING(FILTER_MESSAGES)) {
-		if((line.find("Hub-Security") != string::npos) && (line.find("was kicked by") != string::npos)) {
-			// Do nothing...
-		} else if((line.find("is kicking") != string::npos) && (line.find("because:") != string::npos)) {
-			speak(ADD_SILENT_STATUS_LINE, Text::toDOS(line));
-		} else {
-			speak(ADD_CHAT_LINE, Text::toDOS(line));
-		}
-	} else {
-		speak(ADD_CHAT_LINE, Text::toDOS(line));
-	}
+	speak(ADD_CHAT_LINE, line);
 }
 
 void HubFrame::on(PrivateMessage, Client*, const OnlineUser& from, const OnlineUser& to, const OnlineUser& replyTo, const string& line, bool thirdPerson) throw() {
