@@ -94,12 +94,12 @@ private:
 		tstring homepage;
 		tstring downloads;
 		tstring geoipfile;
-		tstring translations;
 		tstring faq;
 		tstring help;
 		tstring discuss;
 		tstring features;
 		tstring bugs;
+		tstring donate;
 	} links;
 
 	WidgetHPanedPtr paned;
