@@ -144,9 +144,16 @@ void PrivateFrame::addChat(const tstring& aLine) {
 	}
 	line += aLine;
 
+	SCROLLINFO scrollInfo = { sizeof(SCROLLINFO), SIF_RANGE | SIF_PAGE | SIF_POS };
+	bool scroll = (
+		(::GetScrollInfo(chat->handle(), SB_VERT, &scrollInfo) == 0) || // on error, let's keep scrolling...
+		(scrollInfo.nPos == (scrollInfo.nMax - max(scrollInfo.nPage - 1, 0u))) // scroll only if the current scroll position is at the end
+	);
+	HoldRedraw hold(chat, !scroll);
+
 	size_t limit = chat->getTextLimit();
 	if(chat->length() + line.size() > limit) {
-		HoldRedraw hold(chat);
+		HoldRedraw hold2(chat, scroll);
 		chat->setSelection(0, chat->lineIndex(chat->lineFromChar(limit / 10)));
 		chat->replaceSelection(_T(""));
 	}
@@ -160,8 +167,11 @@ void PrivateFrame::addChat(const tstring& aLine) {
 		params["myCID"] = ClientManager::getInstance()->getMe()->getCID().toBase32();
 		LOG(LogManager::PM, params);
 	}
-
 	chat->addText(line);
+
+	if(scroll)
+		chat->sendMessage(WM_VSCROLL, SB_BOTTOM);
+
 	setDirty(SettingsManager::BOLD_PM);
 }
 
@@ -268,29 +278,31 @@ bool PrivateFrame::enter() {
 	bool send = false;
 	// Process special commands
 	if(s[0] == '/') {
+		tstring cmd = s;
 		tstring param;
 		tstring message;
 		tstring status;
-		if(WinUtil::checkCommand(s, param, message, status)) {
+		bool thirdPerson = false;
+		if(WinUtil::checkCommand(cmd, param, message, status, thirdPerson)) {
 			if(!message.empty()) {
-				sendMessage(message);
+				sendMessage(message, thirdPerson);
 			}
 			if(!status.empty()) {
 				addStatus(status);
 			}
-		} else if(Util::stricmp(s.c_str(), _T("clear")) == 0) {
+		} else if(Util::stricmp(cmd.c_str(), _T("clear")) == 0) {
 			chat->setText(Util::emptyStringT);
-		} else if(Util::stricmp(s.c_str(), _T("grant")) == 0) {
+		} else if(Util::stricmp(cmd.c_str(), _T("grant")) == 0) {
 			UploadManager::getInstance()->reserveSlot(replyTo);
 			addStatus(T_("Slot granted"));
-		} else if(Util::stricmp(s.c_str(), _T("close")) == 0) {
+		} else if(Util::stricmp(cmd.c_str(), _T("close")) == 0) {
 			postMessage(WM_CLOSE);
-		} else if((Util::stricmp(s.c_str(), _T("favorite")) == 0) || (Util::stricmp(s.c_str(), _T("fav")) == 0)) {
+		} else if((Util::stricmp(cmd.c_str(), _T("favorite")) == 0) || (Util::stricmp(cmd.c_str(), _T("fav")) == 0)) {
 			FavoriteManager::getInstance()->addFavoriteUser(replyTo);
 			addStatus(T_("Favorite user added"));
-		} else if(Util::stricmp(s.c_str(), _T("getlist")) == 0) {
+		} else if(Util::stricmp(cmd.c_str(), _T("getlist")) == 0) {
 			// TODO handleGetList();
-		} else if(Util::stricmp(s.c_str(), _T("log")) == 0) {
+		} else if(Util::stricmp(cmd.c_str(), _T("log")) == 0) {
 			StringMap params;
 
 			params["hubNI"] = Util::toString(ClientManager::getInstance()->getHubNames(replyTo->getCID()));
@@ -299,7 +311,7 @@ bool PrivateFrame::enter() {
 			params["userNI"] = ClientManager::getInstance()->getNicks(replyTo->getCID())[0];
 			params["myCID"] = ClientManager::getInstance()->getMe()->getCID().toBase32();
 			WinUtil::openFile(Text::toT(Util::validateFileName(SETTING(LOG_DIRECTORY) + Util::formatParams(SETTING(LOG_FILE_PRIVATE_CHAT), params, true))));
-		} else if(Util::stricmp(s.c_str(), _T("help")) == 0) {
+		} else if(Util::stricmp(cmd.c_str(), _T("help")) == 0) {
 			addStatus(_T("*** ") + WinUtil::commands + _T(", /getlist, /clear, /grant, /close, /favorite, /log <system, downloads, uploads>"));
 		} else {
 			send = true;
@@ -323,8 +335,8 @@ bool PrivateFrame::enter() {
 	
 }
 
-void PrivateFrame::sendMessage(const tstring& msg) {
-	ClientManager::getInstance()->privateMessage(replyTo, Text::fromT(msg));
+void PrivateFrame::sendMessage(const tstring& msg, bool thirdPerson) {
+	ClientManager::getInstance()->privateMessage(replyTo, Text::fromT(msg), thirdPerson);
 }
 
 HRESULT PrivateFrame::handleSpeaker(WPARAM, LPARAM) {
