@@ -129,7 +129,6 @@
 #define IDC_HELP_HOMEPAGE			1061
 #define IDC_HELP_DOWNLOADS			1062
 #define IDC_HELP_GEOIPFILE			1063
-#define IDC_HELP_TRANSLATIONS		1064
 #define IDC_HELP_FORUM				1065
 #define IDC_HELP_DISCUSS			1066
 #define IDC_HELP_REQUEST_FEATURE	1067
